--- a/shopapp.html
+++ b/shopapp.html
@@ -69,7 +69,10 @@
     <img class="brand" src="brands/gucci.png">
     <img class="brand" src="brands/prada.png">
     <img class="brand" src="brands/klein.png">
+  </div>
 
+  <div class="new-arrivals">
+    
   </div>
   
 </body>
